<resources>
    <string name="app_name">Car hub</string>
    <string name="buy_my_car">Lloyds - Buy my car</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="available_credit">Available credit</string>
    <string name="deposit">Deposit</string>
    <string name="term">Term</string>
    <string name="filter">Filter</string>
    <string name="bmw">BMW</string>
    <string name="mercedes">Mercedes</string>
    <string name="skoda">Skoda</string>
    <string name="ford">Ford</string>
    <string name="lambo">Lamborghini</string>
    <string name="maserati">Maserati</string>

    <string name="add_more_filter">+ Filter</string>
</resources>
