<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.dminc.lloydshackathon2.Vews.SlidingBar
            android:id="@+id/slider_credits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/available_credit"
            app:maxValue="30000"
            app:value="3000" />

        <com.dminc.lloydshackathon2.Vews.SlidingBar
            android:id="@+id/slider_deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/deposit"
            app:value="0" />

        <com.dminc.lloydshackathon2.Vews.SlidingBar
            android:id="@+id/slider_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:displayMoney="false"
            app:labelText="@string/term"
            app:maxValue="36"
            app:value="24" />

        <com.dminc.lloydshackathon2.Vews.DialView
            android:id="@+id/view_dial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/slider_bottom"
                android:layout_marginTop="@dimen/slider_bottom"
                android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/slider_top"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/filter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filter_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:text="@string/bmw" />

                <TextView
                    android:id="@+id/filter_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/slider_top"
                    android:background="@drawable/button_background"
                    android:text="@string/mercedes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/slider_top"
                    android:background="@drawable/button_background"
                    android:text="@string/add_more_filter" />

            </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/slider_bottom"
                android:layout_marginTop="@dimen/slider_bottom"
                android:background="@color/divider" />

            <ListView
                android:background="#FFFFFF"
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:choiceMode="singleChoice"
                android:minHeight="300dp"
                android:nestedScrollingEnabled="true" />
        </LinearLayout>
</ScrollView>